<resources>
    <string name="app_name">FreizeitApp</string>
    <string name="welcome_to_your_app">Welcome to your App Monique</string>
    <string name="home">Home</string>
    <string name="activity">Your Activities</string>
    <string name="favorite">Your Favorite</string>
    <string name="setting">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Days Activities</string>
    <string name="night">Night Activities</string>
    <string name="day_activities">Choose Your Day Activities</string>
    <string name="night_activities">Choose Your Night Activities</string>
    <string name="Logout">Logout</string>
</resources>