<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

<!--        <item android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite1"
            android:title="@string/favorite" />-->

        <item android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />

        <item android:id="@+id/logout"
            android:icon="@drawable/ausloggen"
            android:title="@string/Logout"
            android:iconTint="@color/white"/>
    </group>

    <item android:title="Activities"
          android:textColor ="@color/white"
        >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/day"
                    android:icon="@drawable/ic_day"
                    android:title="@string/day_activities" />

                <item android:id="@+id/night"
                    android:icon="@drawable/ic_night"
                    android:title="@string/night_activities" />
            </group>

        </menu>

    </item>
</menu>